[package]
name = "stuck_writeback_workaround"
version = "1.0.0"
edition = "2021"
description = "Monitors kworker/*+inode_switch_wbs threads and triggers sync if stuck"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
argh = "0.1"
chrono = "0.4.41"
cnproc = { git = "https://github.com/yorodm/cnproc-rs.git", rev = "fd806a19a7a11257db6000271083c5bb8c1bfaa8" }
env_logger = { version = "0.11", features = [
    "auto-color",
    "humantime",
], default-features = false }
glob-match = "0.2.1"
humantime = "2.2"
log = "0.4"
procfs = { version = "0.17.0", features = ["chrono"] }
rustix = { version = "1.0.8", features = ["fs"] }

[profile.release]
codegen-units = 1 # 3% size gain, for esthetic reasons.
lto = true        # Removes dead code, 20% smaller binary and build is fast anyway.
panic = "abort"   # Unwinding is legacy behavior.
